Add bourbon gem

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,3 +11,9 @@
  *= require_self
  *= require_tree .
  */
+
+@import "bourbon";
+@import "normalize";
+@import "base/body";
+@import "base/layout";
+@import "base/typography";
